challenge11/infrastructure/templates/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: mboukraa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
        - name: webdb
          image: meriambkrr/challenge4-flask-db:v1
          ports:
            - containerPort: 5000
