challenge11/infrastructure/templates/webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb
  namespace: mboukraa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
        - name: webnodb
          image: meriambkrr/challenge4-flask-nodb:v1
          ports:
            - containerPort: 5000
