challenge11/infrastructure/templates/webdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: mboukraa

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: webdb
