challenge11/infrastructure/templates/webnodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: mboukraa

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: webnodb
